<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral90">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="66dp"
        android:layout_y="35dp"
        android:background="@color/gray_700"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/text"
        android:textColor="@color/white"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="44dp"
        android:layout_y="141dp"
        android:background="@color/design_default_color_background"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/test_one"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="147dp"
        android:layout_y="258dp"
        android:background="@color/teal_200"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/test_two"
        android:textColor="@color/white"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="220dp"
        android:layout_y="386dp"
        android:background="@color/purple_200"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/test_three"
        android:textColor="@color/black"
        android:textSize="40sp" />



</AbsoluteLayout>