<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingVertical="40dp"
    android:paddingHorizontal="20dp"
    android:weightSum="5"
    >


    <TextView
        android:id="@+id/helloHeadingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"

        />

    <EditText
        android:id="@+id/helloFullNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:hint="@string/txtfield"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_200"
        android:textSize="22sp"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/helloCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:stateListAnimator="@null"
            android:text="@string/btn1"
            android:textColor="@color/white">

        </Button>

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/helloSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:stateListAnimator="@null"
            android:text="@string/btn2"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>