<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customListItemRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    >
    <ImageView
        android:id="@+id/customListItemImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/imgDes"
        android:scaleType="centerCrop"
        android:src="@drawable/pikachu" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/customListItemImage"
        android:layout_alignBottom="@id/customListItemImage"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@id/customListItemImage"
        android:gravity="center_vertical"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/customListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_title"
            android:textColor="@color/steel_blue"
            android:textSize="22sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />
        <TextView
            android:id="@+id/customListItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/list_item_desc"
            android:textColor="@color/salmon"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>